--- a/GrandTravel/TourViewController.xib
+++ b/GrandTravel/TourViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,7 +29,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="French Autumn" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aI3-vx-nyR">
-                    <rect key="frame" x="0.0" y="316" width="256" height="26.5"/>
+                    <rect key="frame" x="16" y="316" width="256" height="26.5"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="256" id="H2n-dL-jNG"/>
                     </constraints>
@@ -40,13 +38,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$1625.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qB5-nZ-koc">
-                    <rect key="frame" x="272" y="319" width="73" height="21"/>
+                    <rect key="frame" x="288" y="319" width="73" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="1" green="0.3780092108" blue="0.073474410229999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFH-Fk-tSi">
-                    <rect key="frame" x="0.0" y="358.5" width="414" height="64"/>
+                    <rect key="frame" x="16" y="358.5" width="398" height="64"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="mI7-yY-Co1"/>
                     </constraints>
@@ -58,11 +56,11 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TFH-Fk-tSi" secondAttribute="trailing" id="1RM-OG-pLL"/>
+                <constraint firstItem="aI3-vx-nyR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="3DU-vI-nIY"/>
                 <constraint firstItem="TFH-Fk-tSi" firstAttribute="top" secondItem="aI3-vx-nyR" secondAttribute="bottom" constant="16" id="8MS-UZ-xEG"/>
                 <constraint firstItem="LSa-uR-oXx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Ap3-0h-uwC"/>
                 <constraint firstItem="aI3-vx-nyR" firstAttribute="top" secondItem="LSa-uR-oXx" secondAttribute="bottom" constant="16" id="IBT-6z-qfq"/>
-                <constraint firstItem="aI3-vx-nyR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="RZ9-7Y-52q"/>
-                <constraint firstItem="TFH-Fk-tSi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Ybv-v7-1Gn"/>
+                <constraint firstItem="TFH-Fk-tSi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Ybv-v7-1Gn"/>
                 <constraint firstItem="qB5-nZ-koc" firstAttribute="centerY" secondItem="aI3-vx-nyR" secondAttribute="centerY" id="gFR-EA-sbb"/>
                 <constraint firstItem="LSa-uR-oXx" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="kxf-7y-GVf"/>
                 <constraint firstItem="qB5-nZ-koc" firstAttribute="leading" secondItem="aI3-vx-nyR" secondAttribute="trailing" constant="16" id="lqW-ET-zl8"/>
