--- a/GrandTravel/ViewController1.xib
+++ b/GrandTravel/ViewController1.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,9 +18,8 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Home-background" translatesAutoresizingMaskIntoConstraints="NO" id="ANp-ki-rLB">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Home-background" translatesAutoresizingMaskIntoConstraints="NO" id="ANp-ki-rLB">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EXPLORING THE WORLD YOUR WAY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pvM-XL-wK4">
                     <rect key="frame" x="0.0" y="435" width="414" height="26.5"/>
@@ -33,9 +30,13 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="ANp-ki-rLB" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="7zw-1U-JcX"/>
                 <constraint firstItem="pvM-XL-wK4" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="8oF-wB-klm"/>
+                <constraint firstItem="ANp-ki-rLB" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="D8v-QP-zKW"/>
                 <constraint firstItem="pvM-XL-wK4" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FzP-kG-a6I"/>
                 <constraint firstItem="pvM-XL-wK4" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="HYm-77-Pcd"/>
+                <constraint firstItem="ANp-ki-rLB" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Nea-kq-t8c"/>
+                <constraint firstItem="ANp-ki-rLB" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="fGj-BS-k7S"/>
                 <constraint firstItem="pvM-XL-wK4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="oZo-IU-TTC"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
